small-screen overflow porblem fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,7 +60,7 @@ body {
 #time-step-list-container {
   overflow-y: scroll !important;
   direction: rtl;
-  width: 340px;
+  width: min(100%, 340px);
 }
 #time-step-list {
   direction: ltr;
